[tool.poetry]
name = "starship-landing-gym"
version = "0.1.0"
description = ""
authors = ["Armandpl <adpl33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.21.0"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
