[tool.poetry]
name = "starship-landing-gym"
version = "0.1.0"
description = ""
authors = ["Armandpl <adpl33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
wandb = "^0.12.10"
tensorboard = "^2.8.0"
stable-baselines3 = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
