[tool.poetry]
name = "starship-landing-gym"
version = "0.1.3"
description = "A Gym env for rocket landing."
readme = "README.md"
repository = "https://github.com/Armandpl/starship-landing-gym"
authors = ["Armandpl <adpl33@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "1.21.5"
pyglet = "^1.5.21"
gym = "0.19.0"
stable-baselines3 = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
wandb = "^0.12.10"
tensorboard = "^2.8.0"
flake8 = "^4.0.1"
PyVirtualDisplay = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
